PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.8.0 (2019-??-??)
------------------
Features:
- Support for API v4.3.0 (https://www.siel.nl/acumulus/API/Changelog/): Store
  conceptid if available and there is no entryid.

Bugs:
- WC3: WC3 changed what actions are fired during order create/update. As a
  result this plugin missed checking the status on order creation.
- WC: Use billing address if shipping address is not available and tax is based
  on shipping address.

5.7.4 (2019-08-29)
------------------
Bugs:
- MA2: Versie die getoond werd bij de support-informatie was de databaseschema-
  versie (uit module.xml), niet de moduleversie van de module (uit
  composer.json).
- MA2: Kortingen worden niet goed doorgegeven als prijzen ex btw zijn ingevoerd.
  getBaseShippingDiscountAmount() is inc of ex btw afhankelijk van of korting
  voor of na btw verrrekend wordt. MA1 heeft dit waarschijnlijk ook, maar daar
  gaat de winkel ook de fout in.
- WC: CRITICAL Uncaught ArgumentCountError: Too few arguments to function
  ...::woocommerce_attribute_label(), 2 passed and exactly 3 expected.
- WC: Acumulus info box op bestellingpagina verdwijnt bij handmatige sortering
  van de info boxen.
- WC: Acumulus info box op bestellingpagina toont verkeerde bedragen, en
  daardoor een waarschuwing, bij facturen met buitenlandse btw.

Refactorings:
- WC: Use $recalculatePrice (with the tag to recalculate as value) instead of
  boolean $recalculateUnitPrice.
- WC: WooCommerce 3.7 renamed get_used_coupons() to get_coupon_codes().

5.7.3 (2019-06-25) (MA2 only)
-----------------------------
Features:
- Added support for the Fooman surcharge payment module.

5.7.2 (2019-05-15) (JOO only)
-----------------------------
Bugs:
- Errors in the install process:
  * syntax error in <version> tag in xml files.