@@ -24,6 +24,10 @@ Features:
   conceptid if available and there is no entryid.
 
 Bugs:
+- WC: If the setting "Rond belastingen af bij subtotalen, in plaats van per
+  regel" was not checked and if the setting "Prijzen ingevoerd met belastingen"
+  was set to "Ja, ik wil prijzen inclusief belasting invoeren", the plugin
+  would recalculate the unit price ex vat incorrectly.
 - WC3: WC3 changed what actions are fired during order create/update. As a
   result this plugin missed checking the status on order creation.
 - WC: Use billing address if shipping address is not available and tax is based
